Updated repl script location for debug

--- a/examples/repl.html
+++ b/examples/repl.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="utf8">
 	<title>SQL REPL</title>
-	<script src="../dist/sql-wasm.js"></script>
+	<script src="../dist/sql-wasm-debug.js"></script>
 </head>
 
 <body>
